--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ verify_ssl = true
 [dev-packages]
 pylama = "*"
 rope = "*"
+pprint = "*"
 
 [packages]
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
